# hcpctl

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  netlify.toml  public-key.asc  release-please-config.json
.github/: AGENTS.md  copilot-instructions.md  dependabot.yml
.github/agents/: api-perf.agent.md  code_review.agent.md  code_review_dead_code.agent.md  code_review_duplicates.agent.md  code_review_errors.agent.md  code_review_security.agent.md  critic.agent.md  design.agent.md  feature.agent.md  guide.agent.md  implement.agent.md  review.agent.md  rust-beast-mode.agent.md  test.agent.md
.github/instructions/: github-actions.instructions.md  rust-hcpctl.instructions.md  testing.instructions.md
.github/prompts/: sync-copilot.prompt.md
.github/skills/add-resource/: SKILL.md
.github/workflows/: release-please.yml  release.yml
book/: 404.html  CommandLineHelp.html  index.html  print.html  searcher-c2a407aa.js  searchindex-6bd35de9.js  toc-66a6b1cf.js  toc.html
docs/: CommandLineHelp.md  book.toml
docs/src/: CommandLineHelp.md  SUMMARY.md  _redirects  robots.txt  sitemap.xml
docs/src/guides/: authentication.md  contexts-workflows.md  getting-started.md  runs-and-logs.md  users-and-teams.md  workspaces.md
docs/theme/: head.hbs
scripts/: build-release.sh  install.ps1  install.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: common.rs  context.rs  delete.rs  download.rs  enums.rs  get.rs  invite.rs  logs.rs  mod.rs  purge.rs  set.rs  tag.rs  team_access.rs  watch.rs
src/context/: commands.rs  mod.rs  models.rs  resolve.rs  store.rs
src/hcp/: client.rs  credentials.rs  helpers.rs  host.rs  mod.rs  models.rs  traits.rs
src/hcp/configuration_versions/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/logs/: commands.rs  mod.rs
src/hcp/oauth_clients/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/org_memberships/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/organizations/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/projects/: api.rs  commands.rs  mod.rs  models.rs  resolver.rs
src/hcp/runs/: api.rs  commands.rs  log_utils.rs  mod.rs  models.rs
src/hcp/state/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/tags/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/team_projects/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/teams/: api.rs  commands.rs  mod.rs  models.rs
src/hcp/watch/: commands.rs  mod.rs
src/hcp/workspaces/: api.rs  commands.rs  mod.rs  models.rs  resolver.rs  set_api.rs  set_commands.rs
src/output/: common.rs  csv.rs  json.rs  mod.rs  oauth_clients.rs  org_memberships.rs  organizations.rs  projects.rs  runs.rs  state_versions.rs  table.rs  tags.rs  team_access.rs  teams.rs  workspaces.rs
src/ui/: confirm.rs  mod.rs  spinner.rs
src/update/: mod.rs
tests/: cli_tests.rs
