[package]
name = "hcpctl"
version = "0.0.0"
edition = "2021"
description = "CLI tool to explore Hashicorp Cloud"
authors = ["Piotr Kodzis"]
license = "MIT"
repository = "https://github.com/pkodzis/hcpctl"
keywords = ["hashicorp", "terraform", "hcp", "cli", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "7.1"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
indicatif = "0.17"
dirs = "6.0.0"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "hcpctl"
path = "src/lib.rs"

[[bin]]
name = "hcpctl"
path = "src/main.rs"
