[package]
name = "hcpctl"
version = "0.13.0"
edition = "2021"
description = "A CLI for HCP Terraform (formerly Terraform Cloud/Enterprise)."
authors = ["Piotr Kodzis"]
license = "MIT"
repository = "https://github.com/pkodzis/hcpctl"
keywords = ["hashicorp", "terraform", "hcp", "cli", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
comfy-table = "7.2"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
indicatif = "0.18"
dirs = "6.0.0"
dialoguer = "0.12"
urlencoding = "2.1.3"
md-5 = "0.10"
clap-markdown = "0.1.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.25.0"
wiremock = "0.6"

[profile.release]
strip = true      # Strip symbols from binary
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization (slower compile)
# panic = "abort"   # Smaller binary, no unwinding

[lib]
name = "hcpctl"
path = "src/lib.rs"

[[bin]]
name = "hcpctl"
path = "src/main.rs"
